# jmapc

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  coverage.xml  mkdocs.yml  pipenv  pyproject.toml  pytest.ini  setup.cfg  setup.py  sseclient.pyi  tox.ini
.github/workflows/: cd.yml  ci.yml  main.yml
.github/workflows/actions/python-poetry/: action.yml
docs/: gen_ref_pages.py  index.md  requirements.txt
examples/: create_send_email.py  debug_log.py  echo.py  event_source.py  get_recent_threads.py  identity_get.py  mailbox.py  recent_threads.py  search.py
jmapc/: __init__.py  api.py  auth.py  client.py  config.py  constants.py  errors.py  jmap.py  logging.py  main.py  models.py  ref.py  serializer.py  session.py  util.py
jmapc/fastmail/: __init__.py  maskedemail_methods.py  maskedemail_models.py
jmapc/methods/: __init__.py  base.py  core.py  custom.py  email.py  email_submission.py  fastmail_maskedemail.py  identity.py  mailbox.py  methods.py  search_snippet.py  thread.py  vacation_response.py
jmapc/models/: __init__.py  email.py  email_submission.py  event.py  identity.py  mailbox.py  models.py  search_snippet.py  thread.py  vacation_response.py
jmapc/types/: __init__.py  errors.py  jmap.py  methods.py  methods_email.py  methods_identity.py  methods_mailbox.py  methods_thread.py  models.py  session.py  util.py
jmapc/types/jmap/: __init__.py  errors.py  methods.py  methods_email.py  methods_identity.py  methods_mailbox.py  methods_thread.py  models.py  session.py
tests/: conftest.py  data.py  test_client.py  test_events.py  test_jmap.py  test_main.py  test_module.py  test_ref.py  test_serializer.py  utils.py
tests/methods/: test_base.py  test_core.py  test_custom.py  test_email.py  test_email_submission.py  test_errors.py  test_fastmail_maskedemail.py  test_identity.py  test_mailbox.py  test_searchsnippet.py  test_thread.py
types/: sseclient.pyi
