[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "jmapc"
description = "JMAP client library for Python"
license = "GPL-3.0-or-later"
authors = [ { name = "Stephen Kent", email = "smkent@smkent.net" } ]
readme = "README.md"
repository = "https://github.com/smkent/jmapc"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9,<4.0"
dynamic = [ "version" ]
dependencies = [
    "brotli (>=1.0.9)",
    "dataclasses-json",
    "python-dateutil",
    "requests",
    "sseclient",
]
include = [
    "examples",
]

[project.scripts]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "*"}
black = "*"
cruft = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-pyproject = "*"
flake8-simplify = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
types-python-dateutil = "*"
types-requests = "*"
responses = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.bandit]
skips = ["B101"]  # assert_used

[tool.black]
line-length = 79

[tool.coverage.run]
source = ["jmapc"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.flake8]
exclude = "./.*"

[tool.isort]
atomic = true
profile = "black"
line_length = 79

[tool.mypy]
files = [ "tests", "jmapc" ]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """\
    --cov \
    --cov-append \
    --cov-report term \
    --cov-report xml:.pytest_coverage.xml \
    --junitxml=.pytest_results.xml \
"""

# vim: ft=cfg
